manifests/update-image-tags-yaml-octopub/security/octopub-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octopub-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: web
          image: ghcrfacade-a6awccayfpcpg4cg.eastus-01.azurewebsites.net/octopub-frontend:20251118.468.1
          ports:
            - containerPort: 8080
              name: http-port
